[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cartaro"
dynamic = ["version"]
description = 'Work Journal/Chronicler'
# readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-only"
keywords = []
authors = [
  { name = "Craig N. Caroon", email = "craig.caroon@cengage.com" },
]
dependencies = [
  "arrow ~= 1.3.0",
  "cryptography ~= 41.0.7",
  "flask ~= 2.3.3",
  "inflector ~= 3.1.0",
  "requests ~= 2.32",
  "tinydb ~= 4.8.0",
  "wheel ~= 0.45",
  # For the data converter
  # "mysql-connector-python ~= 8.0.22"
]

[project.urls]
Documentation = "https://github.com/ccaroon/cartaro#readme"
Issues = "https://github.com/ccaroon/cartaro/issues"
Source = "https://github.com/ccaroon/cartaro"

[tool.hatch.version]
path = "cartaro/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/cartaro",
]

[tool.hatch.envs.hatch-test]
default-args = ["tests"]
extra-dependencies = [
  "faker ~= 22.2.0",
  "invoke ~= 2.2",
]
[tool.hatch.envs.hatch-test.env-vars]
CARTARO_ENV = "test"
CARTARO_DOC_PATH = "tests/tmp"
CARTARO_CFG_PATH = "../tests/data"

[tool.coverage.run]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 90
include = ["cartaro/*"]
